<resources>
    <string name="app_name">Smart Shopping</string>
    <string name="shopping_cart">Shopping Cart</string>
    <string name="barcode_scanner">barcode_scanner</string>
    <string name="checkout">Checkout</string>
    <string name="no_item">Empty cart</string>
    <string name="close_scanner">Close Scanner</string>
    <string name="order_confirmation">Order confirmation</string>
    <string name="print_invoice">Print Invoice</string>
    <string name="confirm">Confirm</string>
    <string name="total">Total</string>
    <string name="tax">GST at 18%</string>
    <string name="subtotal">Subtotal</string>
    <string name="order_summary">Order Summary</string>
    <string name="continue_shopping">Continue Shopping</string>
</resources>